# connect4

./: .gitignore  Bot.cpp  Bot.h  BotParameters.h  CMakeLists.txt  Game.cpp  Game.h  Makefile  Pieces.cpp  Pieces.h  connect4.workspace  main.cpp
.codelite/: connect4.tags
connect4/: Game.h  connect4.mk  connect4.project  main.cpp
connect4/Debug/: connect4
